--- a/app/src/main/res/layout/activity_terms_and_conditions.xml
+++ b/app/src/main/res/layout/activity_terms_and_conditions.xml
@@ -9,21 +9,25 @@
 
     <ImageButton
         android:id="@+id/btnClose"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="32dp"
+        android:background="@null"
         android:src="@drawable/ic_baseline_clear_24"
+        app:layout_constraintStart_toEndOf="@+id/tvTermsAndConditions"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
         android:id="@+id/tvTermsAndConditions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
-        android:text="@string/terms_and_conditions"
+        android:text="@string/terms_and_conditions_activity"
+        android:textColor="@color/title"
         android:textSize="32sp"
+        app:layout_constraintEnd_toStartOf="@+id/btnClose"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/btnClose" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvTitle"
@@ -31,7 +35,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="@string/app_name"
-        android:textSize="64sp"
+        android:textColor="@color/blue"
+        android:textSize="55sp"
         android:textStyle="bold"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -40,17 +45,21 @@
 
     <ScrollView
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/tvTitle"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/tvTitle">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/textTermsAndConditions"/>
+                android:text="@string/textTermsAndConditions"
+                android:textColor="@color/title" />
         </LinearLayout>
     </ScrollView>
 
