--- a/app/src/main/res/layout/suggestion_toolbar.xml
+++ b/app/src/main/res/layout/suggestion_toolbar.xml
@@ -1,24 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <ImageView
             android:id="@+id/btnGoBack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_baseline_arrow_back_ios_24"
-            />
+            app:layout_constraintBottom_toBottomOf="@+id/tvSuggestionTitle"
+            app:layout_constraintEnd_toStartOf="@+id/tvSuggestionTitle"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/tvSuggestionTitle" />
+
         <TextView
             android:id="@+id/tvSuggestionTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="88dp"
             android:text="@string/example_suggestion"
             android:textColor="@color/white"
-            android:textSize="24sp"/>
-    </LinearLayout>
+            android:textSize="24sp"
+            app:layout_constraintStart_toEndOf="@+id/btnGoBack"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
